Fixed my button spacing

--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@
   position: fixed;
   top: 0;
   width: 100%;
+  margin-right: 10px;
 }
-
+button {
+  min-width: 80px;
+  margin-inline: 3px;
+}
 .navbar {
   background-color: aqua;
   padding: 10px;
@@ -58,6 +62,7 @@ img {
   width: 300px;
   height: 300px;
   border: solid 3px rgb(222, 203, 203);
+  padding: 7px;
 }
 
 .display-flex {
@@ -66,7 +71,7 @@ img {
   justify-content: space-around;
 }
 hr {
-  margin-inline: 22%;
-
+  width: 50%;
+  margin: auto;
   height: 3px;
 }
